tests/invalid/enum/match_payload_variant.facet
enum Maybe {
  Some(unrestricted isize),
  None
}

fn score(m: unrestricted Maybe) -> unrestricted isize {
  match m {
    Some => 1,
    None => 0,
  }
}
